# avogadro

libavogadro/src/: plotwidget.cpp
libavogadro/src/extensions/: CMakeLists.txt
libavogadro/src/extensions/crystallography/: crystallographyextension.cpp
libavogadro/src/extensions/yaehmop/: CMakeLists.txt  guessprojections.h  numorbitals.h  specialkpoints.cpp  specialkpointsdata.h  yaehmopbanddialog.cpp  yaehmopbanddialog.h  yaehmopbanddialog.ui  yaehmopcoopdialog.cpp  yaehmopcoopdialog.h  yaehmopcoopdialog.ui  yaehmopextension.cpp  yaehmopextension.h  yaehmopout.cpp  yaehmopout.h  yaehmopprojecteddosdialog.cpp  yaehmopprojecteddosdialog.h  yaehmopprojecteddosdialog.ui  yaehmoptotaldosdialog.cpp  yaehmoptotaldosdialog.h  yaehmoptotaldosdialog.ui
